--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,30 +1,21 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <img class="navbar-img" src="{{site.url}}/images/msl_logo.png">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class='navbar-brand page-scroll' href='/'>
-              <span style='font-family:"Open Sans" font-weight:300'>{{ site.name }}</span>
-              </a>
-            </div>
+<nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <ul class="nav navbar-nav navbar-right">
-                      {% for nav in site.nav %}
-                      <li><a class='name' href="{{ nav.href }}">{{ nav.name }}</a></li>
-                      {% endfor %}
-                    </ul>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
+    <a class="navbar-brand mr-auto" href="#">
+        <span class="d-inline-block d-sm-none">Navbar</span>
+    </a>
+
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto d">
+        <li> <a class="navbar-brand d-none d-sm-block" href="#">Navbar</a> </li>
+      {% for nav in site.nav %}
+        <li class="nav-item">
+            <a class='nav-link' href="{{ nav.href }}">{{ nav.name }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+    </div>
 </nav>
