--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,3 +6,7 @@ layout: default
     <div class="home-masthead justify-content-center mx-auto">{{ content }} </div>
 
     {% include news.html %}
+
+    {% include follow-us.html %}
+
+    {% include footer.html %}
