homepage, navbar, & footer v0

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="footer text-white pt-2 pb-2">
+<div class="footer text-white pt-2 pb-2 mt-auto">
 
     <div class="container">
         <div class="row icons justify-content-center">
