--- a/_includes/follow-us.html
+++ b/_includes/follow-us.html
@@ -1,5 +1,5 @@
 <div class="follow text-white justify-content-center py-4">
-    <h2> <span text-align="center"><i class="fa fa-paper-plane" display="inline"></i> Follow Us! </span> </h2>
+    <h2> <span text-align="center"><i class="fa fa-paper-plane pr-2" display="inline"></i> Follow Us! </span> </h2>
 
     <div class="container mt-4">
         <div class="row">
