--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,21 +1,39 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
+<nav class="navbar navbar-expand-md navbar-light bg-light justify-content-center align-content-center">
 
-    <a class="navbar-brand mr-auto" href="#">
-        <span class="d-inline-block d-sm-none">Navbar</span>
+    <a class="navbar-brand mr-auto" href="/">
+        <span class="d-inline-block d-md-none align-middle">
+            <img class="my-0 img-responsive" style="max-height: 50px; margin: 0;" src="{{site.url}}/images/msl_logo.png" />
+        </span>
     </a>
 
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler ml-auto align-content-center" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mx-auto d">
-        <li> <a class="navbar-brand d-none d-sm-block" href="#">Navbar</a> </li>
-      {% for nav in site.nav %}
-        <li class="nav-item">
-            <a class='nav-link' href="{{ nav.href }}">{{ nav.name }}</a>
+    <ul class="navbar-nav mx-auto align-items-center d">
+        <li class="my-0">
+            <a class="navbar-brand d-none d-sm-block my-0 mr-4 mr-lg-5 ml-0" href="/">
+                    <img class="my-0 img-responsive" style="max-height: 50px;" src="{{site.url}}/images/msl_logo.png" />
+            </a>
         </li>
+      {% for nav in site.nav %}
+        {% if page.permalink == nav.href %}
+            <!-- current page is active; set nav class -->
+            <li class="nav-item my-0">
+                <a class='nav-link active py-0' href="{{ nav.href }}">{{ nav.name }}</a>
+            </li>
+        {% else %}
+            <li class="nav-item my-0">
+                <a class='nav-link py-0' href="{{ nav.href }}">{{ nav.name }}</a>
+            </li>
+        {% endif %}
       {% endfor %}
+      <li class="my-0">
+          <a class="navbar-brand d-none d-sm-block my-0 mr-0 ml-4 ml-lg-5" href="https://www.stanford.edu/">
+                  <img class="my-0 img-responsive" style="max-height: 45px;" src="{{site.url}}/images/stanford_logo.png" />
+          </a>
+      </li>
     </ul>
     </div>
 </nav>
