--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-    <img src="{{site.url}}/images/projects/msl_herd-4.jpg" class="img-fluid banner-img" />
+    <span class="d-inline-block align-middle">
+        <img src="{{site.url}}/images/projects/msl_herd-4.jpg" style="max-height: 325px; min-width: 100%; margin: 0;" class="img-fluid banner-img my-0" />
+    </span>
 
     <div class="home-masthead justify-content-center mx-auto">{{ content }} </div>
 
     {% include news.html %}
 
     {% include follow-us.html %}
-
-    {% include footer.html %}
