style changes to incorporate design feedback

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light justify-content-center align-content-center">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center align-content-center">
 
     <a class="navbar-brand mr-auto" href="/">
         <span class="d-inline-block d-md-none align-middle">
