--- a/_includes/follow-us.html
+++ b/_includes/follow-us.html
@@ -1,21 +1,21 @@
-<div class="follow text-white justify-content-center py-4">
+<div class="follow shadow text-white justify-content-center w-100">
     <h2> <span text-align="center"><i class="fa fa-paper-plane pr-2" display="inline"></i> Follow Us! </span> </h2>
 
     <div class="container mt-4">
         <div class="row">
                 <div class="col-10 text-center text-white mx-auto py-1">
-                    Our latest publications can be found <a href="/publications/">here.</a>
+                    <p> Our latest publications can be found <a href="/publications/">here.</a> </p>
                 </div>
         </div>
         <div class="row">
                 <div class="col-10 text-center text-white mx-auto py-1">
-                    Follow us on Twitter <a href="https://www.twitter.com/stanfordmsl"> @stanfordmsl!</a>
+                    <p> Follow us on Twitter <a href="https://www.twitter.com/stanfordmsl"> @stanfordmsl!</a> </p>
                 </div>
         </div>
         <div class="row">
                 <div class="col-10 text-center text-white mx-auto py-1">
-                    For recent talks and technical videos, check out our
-                        <a href="https://www.youtube.com/channel/UC_AgJUMueDFePnVwlLDpVBQ"> Youtube channel. </a>
+                    <p>For recent talks and technical videos, check out our
+                     <a href="https://www.youtube.com/channel/UC_AgJUMueDFePnVwlLDpVBQ"> Youtube channel. </a> </p>
                 </div>
         </div>
     </div>
