Updates profile backend
- Updates the profile html to use more variables from a _people MD file.
- Adds a style file for the profile pages.
- Updates the _people MD files to match new changes.

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -1,7 +1,29 @@
 ---
 layout: default
 ---
-<div class="container content page">
-  <h3 class="page-title">{{ page.name }}</h3>
-  {{ content }}
+<link href="{{ site.url }}/css/profile.css" rel="stylesheet">
+<div class="container justify-content-center mx-auto">
+  <div class="row">
+    <div class="col-md-5">
+      <img 
+        class="mx-auto d-block mb-2 float-md-left mr-md-4 img-fluid"
+        src="{{site.url}}/images/people/{{page.avatar}}"
+        alt="{{page.name}}"
+        style="max-width: 500px"
+      >
+    </div>
+    <div class="col-md-7">
+      <h2 class="page-title">{{ page.name }}</h2>
+      <p class="profile contact"><strong>Position: </strong>{{page.position}}</p>
+      <p class="profile contact"><strong>Focus: </strong>{{page.focus}}</p class=".profile.contact">
+      <p><h3>Bio:</h3>{{content}}</p>
+      <br>
+      <h3>Contact Info:</h3>
+      <p class="profile contact"><strong>Email: </strong>{{page.email}}</p> 
+      <p class="profile contact"><strong>Office: </strong>{{page.location}}</p>
+      {% if page.hours %}
+        <p><strong>Office Hours: </strong>{{page.hours}}</p>
+      {% endif %}
+    </div>
+  </div>
 </div>
