--- a/style.scss
+++ b/style.scss
@@ -295,6 +295,30 @@ tbody tr:nth-child(odd) th {
   }
 }
 
+@media (min-width: 576px) {
+  .container {
+    width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1180px;
+  }
+}
+
 .masthead {
 
   &-title {
@@ -649,6 +673,96 @@ img.banner-img {
     font-weight: 400
 }
 
-// ol.bibliography li {
-//  list-style: none;
-//}
+.nav-tabs {
+  display: block;
+}
+
+.nav-tabs>li {
+  display: inline-block;
+}
+
+.publication-head {
+  border: 0;
+  border-top: 0.6px solid #969696;
+  border-bottom: 0.6px solid #969696;
+  margin: 0 0 0 0;
+}
+
+.publication-head-content {
+  padding: 0.47rem 0 0.47rem 0.6rem;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  border: 2px solid #c2c2c2;
+  word-spacing: 0.013rem;
+}
+
+.publication-head-content h3 {
+  margin: 0;
+}
+
+.publication-title {
+  border-left: 3px solid #9a9a9a;
+  border-right: 3px solid #9a9a9a;
+  border-bottom: 3px solid #9a9a9a;
+  border-radius: 0 0 13px 13px;
+  background-color: #8c1515;
+  padding: 1.97rem 1.2rem 0.9rem 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.publication-title h2 {
+  color: white;
+  margin: 0;
+  font-size: 2.2rem;
+}
+
+.publication-content {
+  margin-left: 1.2rem;
+  margin-right: 1.2rem;
+}
+
+.publication-descrip {
+  padding-left: 0;
+}
+
+ol.bibliography {
+  padding: 0.9rem 0.9rem 2rem 0.9rem;
+  margin: 0;
+}
+
+.publication-nav {
+  margin-bottom: 1rem;
+  min-height: 2.1rem;
+}
+
+.publication-nav span {
+  font-weight: 500;
+  font-size: 0.9rem;
+  float: left;
+  padding: 11px 0px 4px 12px;
+  margin-right: 1.8rem;
+}
+
+@media (max-width:40em) {
+  .publication-nav span {
+    font-weight: 600;
+    font-size: 0.9rem;
+    display: block;
+    width: 100%;
+    padding: 10px 0px 4px 12px;
+    margin-bottom: 0.46rem;
+    margin-right: 0;
+  }
+}
+
+.publication-nav a {
+  color: #737373;
+  font-size: 0.87rem;
+  font-weight: 400;
+}
+
+
+ol.bibliography li {
+  padding-top: 0.13rem;
+  padding-bottom: 0.13rem;
+}
