modified publications page for easier viewing

--- a/style.scss
+++ b/style.scss
@@ -763,6 +763,7 @@ ol.bibliography {
 
 
 ol.bibliography li {
-  padding-top: 0.13rem;
-  padding-bottom: 0.13rem;
+  padding-top: 0.18rem;
+  padding-bottom: 0.18rem;
+  margin-bottom: 0.3rem;
 }
