--- a/style.scss
+++ b/style.scss
@@ -430,6 +430,13 @@ tbody tr:nth-child(odd) th {
   height: 200px;
 }
 
+.pi-thumbnail {
+  object-fit: cover;
+  object-position: center top;
+  width: 300px;
+  height: 300px;
+}
+
 .highlight .hll { background-color: #ffffcc }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
@@ -506,6 +513,7 @@ tbody tr:nth-child(odd) th {
 .list-item-people {
   display: inline-block;
   padding-right: 1em;
+  vertical-align:top;
 }
 
 .list-post-title img {
