Cleans up people page code
- Adds include html files to act as functions for the people and profile pages.
  - Adds person.html to create each individual's profile "card" to use on the people page.
  - Adds position_text to convert the "position" variable to humanreadable text for use in the people and profile pages.
- Updates the people MD file to use the new include files.
- Updates the profile layout to use the position_text include file.

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -18,24 +18,7 @@ layout: default
         <h5 class="degree">{{page.degree}}</h5>
       {% endif %}
       <p class="profile contact"><strong>Position: </strong>
-        {% case page.position %}
-          {% when "researchengineer" %}
-            Research Engineer
-          {% when "gradstudent" %}
-              Graduate Student
-          {% when "postdoc" %}
-            Postdoctoral Scholar
-          {% when "phd" %}
-            PhD Candidate
-          {% when "pi" %}
-            Principal Investigator
-          {% when "undergrad" %}
-            Undergraduate Student
-          {% when "affiliate" %}
-            Lab Affiliate
-          {% else %}
-            ---
-        {% endcase %}
+        {% include position_text.html position=page.position %}
       </p>
       {% if page.focus %}
         <p class="profile contact"><strong>Focus: </strong>{{page.focus}}</p>
