--- a/_includes/person.html
+++ b/_includes/person.html
@@ -1,20 +1,21 @@
 <div class="list-item-people">
     <p class="list-post-title">
-        {% if person.avatar %}
         <a href="{{site.url}}{{person.url}}">
             <img
-            class="profile-thumbnail"
-            src="{{site.url}}/images/people/{{person.avatar}}">
+                class="profile-thumbnail"
+                {% if person.avatar %}
+                    src="{{site.url}}/images/people/{{person.avatar}}">
+                {% else %}
+                    src="{{site.url}}/images/people/stanford_tree.png>
+                {% endif %}
         </a>
-        {% else %}
-        <img
-            class="profile-thumbnail"
-            src="{{site.url}}/images/stanford_tree.png>
-        {% endif %}
         <a class="name" href="{{site.url}}{{person.url}}">
-        <b>{{person.name}}</b>
+            <b>{{person.name}}</b>
         </a>
     </p>
-    <p>{% include position_text.html position=include.position %}<hr></p>
-    <p style="width: 200px;"> {{person.focus}} </p>
+    <p class="list-post-extra">
+        {% include position_text.html position=include.position %}
+    </p>
+    <hr class="list-post-extra">
+    <p class="list-post-extra">{{person.focus}}</p>
 </div>
