--- a/style.scss
+++ b/style.scss
@@ -512,8 +512,9 @@ tbody tr:nth-child(odd) th {
 
 .list-item-people {
   display: inline-block;
-  padding-right: 1em;
-  vertical-align:top;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+  vertical-align: top;
 }
 
 .list-post-title img {
@@ -527,6 +528,13 @@ tbody tr:nth-child(odd) th {
 
 .list-post-title {
   color: black;
+}
+
+.list-post-extra {
+  font-size: 16px;
+  margin: 0px;
+  padding: 0px;
+  max-width: 200px;
 }
 
 .list-detail {
