Fixes missing quotation
- Fixes a missing quotation for the default avatar image.

--- a/_includes/person.html
+++ b/_includes/person.html
@@ -6,7 +6,7 @@
                 {% if person.avatar %}
                     src="{{site.url}}/images/people/{{person.avatar}}">
                 {% else %}
-                    src="{{site.url}}/images/people/stanford_tree.png>
+                    src="{{site.url}}/images/people/stanford_tree.png">
                 {% endif %}
         </a>
         <a class="name" href="{{site.url}}{{person.url}}">
