--- a/style.scss
+++ b/style.scss
@@ -822,3 +822,14 @@ ol.bibliography li {
   font-size: 0.87rem;
 }
   
+.people-title {
+  background-color: #f4f4f4;
+  border: 2px solid #9c9c9c;
+  border-radius: 12px;
+  padding: 0.8rem;
+  margin-top: 0.73rem;
+}
+
+.people-title h3 {
+  margin: 0;
+}
