partial commit, mostly styling changes for project landing + pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,20 +49,10 @@
 </head>
 
 <body id="page-top" class="d-flex flex-column min-vh-100">
+    <div class="container px-0">
+        {% include navbar.html %}
+        {{ content }}
+    </div>
+        {% include footer.html %}
 
-    {% include navbar.html %}
-    {{ content }}
-    {% include footer.html %}
-
-    <!-- <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-  <div class="footer">
-    <div class="footer-left">
-      <img class="footer-left-img" src="{{site.url}}/images/msl_logo.png">
-      <span class="footer-left-text">M</span>ulti-<span class="footer-left-text">R</span>obot <span class="footer-left-text">S</span>ystems <span class="footer-left-text">L</span>ab </div>
-    <div class="footer-right">
-      <img class="footer-right-img" src="{{site.url}}/images/stanford_logo.png"><span></span></div>
-  </div> -->
-</body>
 </html>
