--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,32 +2,32 @@
 layout: default
 ---
 <div class="project-masthead container justify-content-left shadow">
-    <div class="row align-items-center justify-content-center mt-5 mb-5">
-        <div class="col-12 col-md-5 mx-auto px-auto">
-            <div class="row py-1 ml-3">
+    <div class="row align-items-center justify-content-center pt-5 pb-5">
+        <div class="col-12 col-md-5 mr-lg-1 ml-auto mr-auto pr-auto">
+            <div class="row py-1 ml-lg-3">
                 <div class="d-flex mx-auto mx-md-0">
                     <h1><b>M</b>ulti-Robot</h1>
                 </div>
             </div>
-            <div class="row py-1 ml-3">
+            <div class="row py-1 ml-lg-3">
                 <div class="mx-auto mx-md-0">
                     <h1><b>S</b>ystems</h1>
                 </div>
             </div>
-            <div class="row py-1 ml-3">
+            <div class="row py-1 ml-lg-3">
                 <div class="mx-auto mx-md-0">
                     <h1><b>L</b>aboratory</h1>
                 </div>
             </div>
         </div>
-        <div class="col-8 col-md-5 mr-0 mr-md-5 mt-4 mt-md-0 text-justify">
+        <div class="col-8 col-md-4 mr-0 mr-md-auto mt-4 mt-md-0 text-justify">
             {{ content }}
         </div>
     </div>
 </div>
 
-<div class="project-container container justify-content-center">
-    <div class="row justify-content-center mt-5 mb-1">
+<div class="project-container container justify-content-center py-4">
+    <div class="row justify-content-center py-2">
         <div class="col-10 text-center">
             <h2> Current Projects </h2>
         </div>
@@ -37,33 +37,39 @@ layout: default
 
     {% for project in site.projects %}
         {% assign rem = forloop.index | modulo: 2 %}
-            <div class="row project-card align-content-center justify-content-center shadow mx-auto my-3 py-4 px-4">
-                {% if rem == 1 %}
-                <div class="col-10 col-md-8 col-lg-4 mb-3 mb-lg-0 mx-auto align-middle">
+        {% assign default_card_class = "row project-card align-content-center justify-content-center shadow mx-auto py-4 px-4" %}
+        {% if forloop.index ==  site.projects.size %}
+            {% capture card_class %} {{"mt-3 " | append: default_card_class}} {% endcapture %}
+        {% else %}
+            {% capture card_class %} {{"my-3 " | append: default_card_class}} {% endcapture %}
+        {% endif %}
+        <div class="{{card_class}}">
+            {% if rem == 1 %}
+            <div class="col-10 col-md-8 col-lg-4 mb-3 mb-lg-0 mx-auto align-middle">
+                <img src="{{site.url}}/images/projects/{{project.image}}" class="mx-auto"/>
+            </div>
+            {% else %}
+                <div class="col-10 col-md-8 col-lg-4 d-lg-none mb-3 mb-lg-0 mx-auto align-middle">
                     <img src="{{site.url}}/images/projects/{{project.image}}" class="mx-auto"/>
                 </div>
-                {% else %}
-                    <div class="col-10 col-md-8 col-lg-4 d-lg-none mb-3 mb-lg-0 mx-auto align-middle">
-                        <img src="{{site.url}}/images/projects/{{project.image}}" class="mx-auto"/>
-                    </div>
-                {% endif %}
-                <div class="col-md-10 col-lg-6 align-middle mx-auto my-auto">
-                    <div class="row justify-content-center text-center">
-                        <a href="{{site.url}}{{project.url}}">
-                            <h3> {{project.title}} </h3>
-                        </a>
-                    </div>
-
-                    <div class="row text-justify pt-3">
-                        <p> {{project.blurb}} </p>
-                    </div>
+            {% endif %}
+            <div class="col-md-10 col-lg-6 align-middle mx-auto my-auto">
+                <div class="row justify-content-center text-center">
+                    <a href="{{site.url}}{{project.url}}">
+                        <h3> {{project.title}} </h3>
+                    </a>
                 </div>
-                {% if rem == 0 %}
-                    <div class="col-lg-4 d-none d-lg-flex mb-3 mb-lg-0 mx-auto align-middle">
-                        <img src="{{site.url}}/images/projects/{{project.image}}"  class="mx-auto"/>
-                    </div>
-                {% endif %}
+
+                <div class="row text-justify pt-3">
+                    <p> {{project.blurb}} </p>
+                </div>
             </div>
+            {% if rem == 0 %}
+                <div class="col-lg-4 d-none d-lg-flex mb-3 mb-lg-0 mx-auto align-middle">
+                    <img src="{{site.url}}/images/projects/{{project.image}}"  class="mx-auto"/>
+                </div>
+            {% endif %}
+        </div>
 
     {% endfor %}
 </div>
