--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,17 +6,17 @@
                 <div class="row">
                     <div class="col-4 text-white text-center">
                         <a href="https://www.twitter.com/stanfordmsl">
-                            <span class="twitter"></span>
+                            <span class="fab fa-twitter"></span>
                         </a>
                     </div>
                     <div class="col-4 text-white text-center">
                         <a href="mailto:multi-robot-systems-lab@stanford.edu">
-                            <span class="mail"></span>
+                            <span class="fas fa-envelope"></span>
                         </a>
                     </div>
                     <div class="col-4 text-white text-center">
                         <a href="https://www.github.com/stanfordmsl">
-                            <span class="github"></span>
+                            <span class="fab fa-github"></span>
                         </a>
                     </div>
                 </div>
@@ -24,7 +24,7 @@
         </div>
         <div class="row">
             <div class="col-10 footer-text text-white text-center mx-auto justify-content-center">
-                <i class="fa fa-copyright" display="inline"></i> 2020 Stanford MSL. Powered by <a href="https://jekyllrb.com/">Jekyll.</a>
+                <i class="far fa-copyright" display="inline"></i> 2020 Stanford MSL. Powered by <a href="https://jekyllrb.com/">Jekyll.</a>
             </div>
         </div>
     </div>
