--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,5 +1,5 @@
 <div class="news text-black justify-content-center py-5 shadow">
-    <h2> <span text-align="center"><i class="fa fa-newspaper-o pr-2" display="inline"></i> Recent News </span> </h2>
+    <h2> <span text-align="center"><i class="far fa-newspaper pr-2" display="inline"></i> Recent News </span> </h2>
 
     <div class="container mt-4">
         {% assign sorted = (site.news_items | sort: 'date') | reverse | slice: 0, 3%}
